--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Saudi Arabia -- Juvenile literature'
 - !lcc 'DS'
 - !lcc 'PZ'
+- GITenberg
 title: Our Little Arabian Cousin
 url: http://www.gutenberg.org/ebooks/46042
